[project]
name = "this game is too massive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
this game is too massive = "this game is too massive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
